<resources>
    <string name="app_name">film</string>
    <string name="movie">FILM</string>
    <string name="tv">TV</string>
    <string name="image_preview">image preview</string>
    <string name="release_dare">Release Dare</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
</resources>